--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 
 		<div class="row-md-8">
 			<div class="col-md-3">
-				<img th:src="@{/img/logo1.png}" alt="logo1.png" height="200">
+				<img th:src="@{/img/image 6.png}" alt="image 6.png" height="200">
 			</div>
 			<div class="col-md-8">
 				<h4 class="text-center"> Bootcamp & Software Development & DevOps Automation.</h4>
